--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/AlbertoBeddini/AlbertoBeddini.github.io/blob/2bf0293cfa398c99a0004bd21c72b94728cf2150/index.css">
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/6614/6614677.png">
     <script src="https://kit.fontawesome.com/7b1e29ed42.js" crossorigin="anonymous"></script>
     <title>CV - Frank Sinatra</title>
